--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
                 <h3>Desenvolvedora Web em Aprendizado Autodidata</h3>
             </div>
             <p>
-                Aberta a freelancer, estudo desenvolvimento web e crio projetos tanto em Python como Javascript, utilizando os respectivos frameworks Flask e React e com a utilização de banco de dados como o MySQL.
+                Estudo desenvolvimento web e crio projetos tanto em Python como Javascript, utilizando os respectivos frameworks Flask e React e com a utilização de banco de dados como o MySQL.
             </p>
         </div>
         <div class="image-section">
